objects/tffa__ApplicationFact__c.object
<CustomObject>
    <fields>
        <fullName>tffa__Theme__c</fullName>
        <description>The UX theme applied for the related submission, useful for tracking.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UX Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__UXStrategyCode__c</fullName>
        <description>The UX strategy applied for this submission, useful for tracking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UX Strategy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__UXStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>UX strategy applied for the related submission.</description>
        <label>UX Strategy</label>
        <referenceTo>tffa__UXStrategy__c</referenceTo>
        <relationshipLabel>Application Facts</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>The lifetime value (perceived) of the account. An important metric that indicates the total revenue the bank can reasonably expect from the account. Derived from product and other facts.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Application Fact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Facts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>